feat: add support for data-item field fetching
