# docs/swagger.yaml
@@ -1,5 +1,21 @@
 definitions:
-  server.DataItemPostResponse:
+  server.DataItemPutResponse:
+    properties:
+      id:
+        type: string
+      paymentId:
+        type: string
+    type: object
+  server.HTTPError:
+    properties:
+      code:
+        format: integer
+        type: integer
+      message:
+        format: string
+        type: string
+    type: object
+  server.PostResponse:
     properties:
       dataCaches:
         items:
@@ -16,22 +32,6 @@ definitions:
       owner:
         type: string
       version:
-        type: string
-    type: object
-  server.DataItemPutResponse:
-    properties:
-      id:
-        type: string
-      paymentId:
-        type: string
-    type: object
-  server.HTTPError:
-    properties:
-      code:
-        format: integer
-        type: integer
-      message:
-        format: string
         type: string
     type: object
   server.PriceGetResponse:
@@ -53,7 +53,7 @@ info:
     url: https://liteseed.xyz/support
   description: The API is currently live at https://api.liteseed.xyz
   title: Liteseed API
-  version: 0.0.1
+  version: 0.0.6
 paths:
   /price/{bytes}:
     get:
@@ -92,18 +92,18 @@ paths:
       summary: Get price of upload
       tags:
       - Payment
-  /tx/:
+  /tx:
     post:
       consumes:
       - application/json
-      description: Post your data using liteseed
+      description: Post your data in a specified ANS-104 data-item format.
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.DataItemPostResponse'
+            $ref: '#/definitions/server.PostResponse'
         "400":
           description: Bad Request
           schema:
@@ -116,27 +116,35 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/server.HTTPError'
-      summary: Post data
+      summary: Post a data-item
       tags:
       - Upload
-  /tx/{id}:
+  /tx/{id}/{field}:
     get:
       consumes:
       - application/json
-      description: get all the fields of a posted data-item
+      description: |-
+        If you choose to skip field  the whole data-item is returned.
+        Get only the specified field of a posted data-item.
+        In case the specified field is data it tries to automatically detect mime-type.
+        You can specify the response mime-type by either sending a mime-type query parameter or an accept header in the request.
+        Supported mime-type are listed here - https://github.com/gabriel-vasile/mimetype/blob/master/supported_mimes.md.
+        If all else fails defaults to `application/octet-stream`
       parameters:
-      - description: ID of the data-item
+      - description: id of the data-item
         in: path
         name: id
         required: true
         type: string
-      produces:
-      - application/json
+      - description: mime type of the response
+        in: query
+        name: mime-type
+        type: string
       responses:
         "200":
           description: OK
           schema:
-            type: string
+            type: bytes
         "404":
           description: Not Found
           schema:
@@ -145,9 +153,13 @@ paths:
           description: Failed Dependency
           schema:
             $ref: '#/definitions/server.HTTPError'
-      summary: Get a posted data-item
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.HTTPError'
+      summary: Get a field of a data-item
       tags:
-      - Upload
+      - Fetch
   /tx/{id}/{payment_id}:
     put:
       consumes:
@@ -181,46 +193,7 @@ paths:
             $ref: '#/definitions/server.HTTPError'
       summary: Send a payment id for a data-item
       tags:
-      - Upload
-  /tx/{id}/data:
-    get:
-      consumes:
-      - application/json
-      description: |-
-        Get only the data of a posted data-item. It tries to automatically detect mime-type.
-        You can specify the response mime-type by either sending an mime-type query parameter or an accept header in the request.
-        Supported mime-type are listed here - https://github.com/gabriel-vasile/mimetype/blob/master/supported_mimes.md.
-        If all else fails defaults to `application/octet-stream`
-      parameters:
-      - description: ID of the data-Item
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Mime type of the response
-        in: query
-        name: mime-type
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: bytes
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/server.HTTPError'
-        "424":
-          description: Failed Dependency
-          schema:
-            $ref: '#/definitions/server.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/server.HTTPError'
-      summary: Get data of a data-item
-      tags:
-      - Upload
+      - Payment
   /tx/{id}/status:
     get:
       consumes:
@@ -229,7 +202,7 @@ paths:
         Get the current status of a posted data-item.
         Response "created", "queued", "sent", "confirmed", "failed", "invalid"
       parameters:
-      - description: ID of the data-item
+      - description: id of the data-item
         in: path
         name: id
         required: true
@@ -255,5 +228,5 @@ paths:
             $ref: '#/definitions/server.HTTPError'
       summary: Get the status of a data-item
       tags:
-      - Upload
+      - Fetch
 swagger: "2.0"
